# genagenticai

./: .gitignore  README.md
agentic-langgraph-app/: README.md
agentic-langgraph-app/backend/: README.md  pyproject.toml  requests.http
agentic-langgraph-app/backend/agentic_langgraph_backend.egg-info/: PKG-INFO  SOURCES.txt
agentic-langgraph-app/backend/app/: chroma_store.py  config.py  graph.py  main.py  nodes.py  rag.py  router.py  state.py  tools.py
agentic-langgraph-app/backend/app/db/: chroma_store.py  rag.py
agentic-langgraph-app/backend/app/graph/: graph.py  nodes.py  router.py  state.py  system_prompt.py  tools.py
agentic-langgraph-app/backend/app/knowledge/: gpu_knowledge.md
agentic-langgraph-app/backend/app/retrieval/: retrieval.py  retrieval_config.py  retrieval_engine.py
agentic-langgraph-app/backend/data/: knowledge.txt
agentic-langgraph-app/frontend/src/: App.css  App.jsx
backend/: package-lock.json  pyproject.toml  requirements.txt
backend/agentic_langgraph_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: config.py  main.py
backend/app/db/: chroma_store.py  rag.py
backend/app/graph/: graph.py  nodes.py  router.py  state.py  system_prompt.py  tools.py
backend/app/graph/core/: graph.py  nodes.py  router.py  state.py  system_prompt.py  tools.py
backend/app/graph/cv_analysis/: nodes.py  state.py
backend/app/graph/judge/: node.py  state.py  system_prompt.py
backend/app/graph/retrieval/: nodes.py  state.py
backend/app/retrieval/: config.py  engine.py  retrieval_engine.py  retrieval_service.py  schemas.py  service.py
backend/app/search/: data.py  google.py  jobsresult_example.txt  linkedin.py  static.py
backend/app/server/: api.py  schemas.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/chroma_db/: chroma.sqlite3
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
langgraph-course/: 6_memory.ipynb  delivery_app.css  delivery_app.html  delivery_app.js  delivery_app.rar
(+6 files in other folders)
