[project]
name = "agentic-langgraph-backend"
version = "0.1.0"
description = "Minimal LangGraph backend with different search tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.4.8",
    "langchain>=0.3.25",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-text-splitters>=0.3.0",
    "langchain-ollama>=0.2.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.1.0",
    "duckduckgo-search",
    "python-jobspy>=1.1.80"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
