[project]
name = "agentic-langgraph-backend"
version = "0.1.0"
description = "Agentic LangGraph backend"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Web
    "fastapi>=0.139,<1.0",
    "uvicorn>=0.51,<1.0",
    # LangGraph ecosystem
    "langgraph>=1.2,<2.0",
    "langchain>=1.3,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-community>=0.4,<0.5",
    "langchain-chroma>=1.1,<2.0",
    "langchain-text-splitters>=1.1,<2.0",
    "langchain-ollama>=0.3,<1.0",
    # Vector store
    "chromadb>=1.5,<2.0",
    # Utilities
    "python-dotenv>=1.1,<2.0",
    "duckduckgo-search>=8.1,<9.0",
    "python-jobspy>=1.1,<2.0",
    "trafilatura>=2.1.0",
    "ddgs>=9.14.4",
]

# Currently only for development
[dependency-groups]
dev = [
    "pytest>=8.4,<9.0",
    "ruff>=0.12,<1.0",
    "mypy>=1.17,<2.0",
    "build>=1.3,<2.0",
]

[build-system]
requires = [
    "setuptools>=80",
    "wheel",
]

build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

### Groups

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
